--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Cinzel|Montserrat+Subrayada|Neuton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto+Condensed:700" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -16,35 +16,36 @@
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
-	<div class="container">
-		<div></div>
-		<input type="text" name="search" placeholder="..." class="searchbox">
-		<div class="weatherbox">
-			<h1 class="wTemp">23</h1>
-			<h4 class="wDay">Sunny Day</h4>
-			<h3 class="wCity">Dubai, UAE</h3>
-			<div class="secondaryData">
-				<p class="windSpeed">
-					<span>Wind Speed</span>4.8 km/h
-					<i></i>
-				</p>
-				<p class="humidity">
-					<span>Humidity</span>81
-					<i></i>
-				</p>
-				<div class="sunTime">
-					<p class="sunRise">
-						<i></i>
-						<span>Sun Rise</span>5.30am				
-					</p>
-					<p class="sunSet">
-						<i></i>
-						<span>Sun Set</span>6.30pm				
-					</p>
-				</div>
-			</div>
-			
-		</div>
-	</div>
+    <div class="weatherbox">
+      <h1 class="wTemp margBtmS">23</h1>
+      <div class="switch margBtmL">
+          <input id="toggler" class="toggle round" type="checkbox"/>
+          <label for="toggler"></label>
+      </div>
+      <h4 class="wDay margBtmL">Sunny Day</h4>
+      <h3 class="wCity margBtmXL">Dubai, UAE</h3>
+      <div class="secondaryData margBtmL">
+        <div class="row1 margBtmS">
+          <p class="windSpeed">
+            <span>Wind Speed</span>4.8 km/h
+            <i></i>
+          </p>
+          <p class="humidity">
+            <span>Humidity</span>81
+            <i></i>
+          </p>
+        </div>
+        <div class="row2 margBtmL">
+          <p class="sunRise">
+            <i></i>
+            <span>Sun Rise</span>5.30am				
+          </p>
+          <p class="sunSet margBtm">
+            <i></i>
+            <span>Sun Set</span>6.30pm				
+          </p>
+        </div>
+      </div>		
+    </div>
   </body>
 </html>
