--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
   </head>
   <body>
     <div class="weatherbox">
-      <h1 class="wTemp margBtmS">23</h1>
+      <h1 id="temp" class="wTemp margBtmS">23</h1>
       <div class="switch margBtmL">
-          <input id="toggler" class="toggle round" type="checkbox"/>
-          <label for="toggler"></label>
+        <input id="toggler" class="toggle round" type="checkbox">
+        <label for="toggler"></label>
       </div>
-      <h4 class="wDay margBtmL">Sunny Day</h4>
-      <h3 class="wCity margBtmXL">Dubai, UAE</h3>
+      <h4 id="dayType" class="wDay margBtmL">Sunny Day</h4>
+      <h3 id="city" class="wCity margBtmXL">Dubai, UAE</h3>
       <div class="secondaryData margBtmL">
-        <div class="row1 margBtmS">
-          <p class="windSpeed">
-            <span>Wind Speed</span>4.8 km/h
-            <i></i>
+        <div class="row1 margBtmL">
+          <p class="windSpeed">Wind Speed
+            <span id="windSpeed">4.8 km/h</span>
+            <i id="windDirection"></i>
           </p>
-          <p class="humidity">
-            <span>Humidity</span>81
+          <p class="humidity">Humidity
+            <span id="humidity">81</span>
             <i></i>
           </p>
         </div>
         <div class="row2 margBtmL">
           <p class="sunRise">
-            <i></i>
-            <span>Sun Rise</span>5.30am				
+            <i></i>SunRise
+            <span id="sunrise">5.30 am</span>			
           </p>
           <p class="sunSet margBtm">
-            <i></i>
-            <span>Sun Set</span>6.30pm				
+            <i></i>SunSet
+            <span id="sunset">6.30 pm</span>	
           </p>
         </div>
-      </div>		
+      </div>
     </div>
   </body>
 </html>
