Weather data available
Weather data available

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -10,39 +10,39 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto+Condensed:700" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-  
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
     <div class="weatherbox">
-      <h1 id="temp" class="wTemp margBtmS">23</h1>
+      <h1 id="temp" class="wTemp margBtmS"></h1>
       <div class="switch margBtmL">
         <input id="toggler" class="toggle round" type="checkbox">
         <label for="toggler"></label>
       </div>
-      <h4 id="dayType" class="wDay margBtmL">Sunny Day</h4>
-      <h3 id="city" class="wCity margBtmXL">Dubai, UAE</h3>
+      <h4 id="dayType" class="wDay margBtmL"></h4>
+      <h3 id="city" class="wCity margBtmXL"></h3>
       <div class="secondaryData margBtmL">
         <div class="row1 margBtmL">
           <p class="windSpeed">Wind Speed
-            <span id="windSpeed">4.8 km/h</span>
+            <span id="windSpeed"></span>
             <i id="windDirection"></i>
           </p>
           <p class="humidity">Humidity
-            <span id="humidity">81</span>
+            <span id="humidity"></span>
             <i></i>
           </p>
         </div>
         <div class="row2 margBtmL">
           <p class="sunRise">
             <i></i>SunRise
-            <span id="sunrise">5.30 am</span>			
+            <span id="sunrise"></span>
           </p>
           <p class="sunSet margBtm">
             <i></i>SunSet
-            <span id="sunset">6.30 pm</span>	
+            <span id="sunset"></span>
           </p>
         </div>
       </div>
