--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 				<div id="nav"></div>
 				<div id="today"></div>
 				<div id="country"></div>
-				<div class="greet color_animate">Hello, <span id="greeting">GM</span>.</div>
+				<div class="greet color_animate">Hello, <span id="greeting">Good Morning!</span>.</div>
 			</div>
 			<div class="weather">
-				<h2>It's <span id="conditionText"></span> here.</h2>
+				<h2>Weather is <span id="conditionText"></span> here.</h2>
 				<div class="weather-data">
 					<div id="icon"></div>
 	
 					<div class="card-wrapper">
 							<div class="card">
 								<div class="front color_animate_neg">
-									<h1 id="tempC"></h1>		
+									<h1 id="tempC">-</h1>		
 									<p id="degreeC">C</p>
 								</div>							
 							
 								<div class="back color_animate_neg">
-									<h1 id="tempF"></h1>		
+									<h1 id="tempF">-</h1>		
 									<p id="degreeF">F</p>
 								</div>
 							</div>
